user_upload_gallery fixed with additonal orange bar and two images

--- a/app/js/templates/user_upload_gallery.html
+++ b/app/js/templates/user_upload_gallery.html
@@ -19,6 +19,12 @@
       <div class="e-gallery"></div>
       <div class="e-gallery"></div>
     </div>
+<!-- this is where we put the orange bar, images. two, up and down -->
+  <div class="gallery_bottom_bar">
+    <img data-icon="map" src="../../img/arrow-left-white.svg">
+    <img data-icon="map" src="../../img/arrow-right-white.svg">
+  </div>
+<!-- end here -->
   </div>
   <div data-item-detail data-ng-if="itemModalShown"></div>
 </div>
