--- a/app/sass/_component/user_upload_gallery.sass
+++ b/app/sass/_component/user_upload_gallery.sass
@@ -33,6 +33,18 @@
 .gallery-thumbnails
   width: 800px
 
+//gallery bottom bar
+.gallery_bottom_bar
+  background-color: $color-primary
+  height: 46px
+  width: 100%
+  margin-top: 170px
+  display: flex
+  justify-content: flex-end
+  img
+    width: 50px
+    padding: 5px 0
+
 // h5[data-type="left-right"]:before
 //   font-family: FontAwesome
 //   content: " \f02c"
