--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -17,6 +17,7 @@
 @import '_component/user_upload_gallery';
 @import '_component/user_form';
 @import '_component/view-event';
+@import '_component/view_item_detail';
 
 // layouts
 @import '_layout/grid';
