icon for drop n drop and icon for the lower bar for add one more pic

--- a/app/sass/_component/user_upload_gallery.sass
+++ b/app/sass/_component/user_upload_gallery.sass
@@ -23,6 +23,13 @@
   height: 100%
   width: 100%
   margin: auto
+  display: flex
+  img
+    width: 100%
+    justify-content: center
+    height: 100%
+    padding: 7%
+
 
 .view-thumbnails
   border-top: $border_ltgrey
@@ -32,6 +39,11 @@
 
 .gallery-thumbnails
   width: 800px
+  img
+    width: 100%
+    justify-content: center
+    height: 100%
+    padding: 33%
 
 //gallery bottom bar
 .gallery_bottom_bar
@@ -44,6 +56,7 @@
   img
     width: 50px
     padding: 5px 0
+
 
 // h5[data-type="left-right"]:before
 //   font-family: FontAwesome
