--- a/app/js/templates/user_upload_gallery.html
+++ b/app/js/templates/user_upload_gallery.html
@@ -4,7 +4,11 @@
     <div class="view-event">
       <h4 class="image-drop">Drag and Upload Images</h4>
       <div class="drop-images">
-        <div class="drop-box" data-ng-file-drop ng-model="itemImage" data-ng-file-change="upload(itemImage)" data-drag-over-class="{accept:'dragover', reject:'dragover-err', delay:100}" data-ng-multiple="false" data-allow-dir="false" data-accept="image/*,*pdf" data-hide-on-drop-not-available="true">Drop images here</div>
+        <div class="drop-box" data-ng-file-drop ng-model="itemImage" data-ng-file-change="upload(itemImage)" data-drag-over-class="{accept:'dragover', reject:'dragover-err', delay:100}" data-ng-multiple="false" data-allow-dir="false" data-accept="image/*,*pdf" data-hide-on-drop-not-available="true">
+          <!-- cloud image -->
+          <img data-icon="map" src="../../img/cloud-upload-white.svg">
+          <!-- end cloud image -->
+        </div>
         <div data-ng-no-file-drop>File drag/drop is not support by your browser</div>
       </div>
     </div>
@@ -13,16 +17,20 @@
   <div class="view-thumbnails">
   <!--<h5 data-type="left-right"><a href="">Edit Event</a></h5> -->
     <div class="gallery-thumbnails">
+      <div class="e-gallery">
+        <!-- plus image -->
+        <img data-icon="upload" src="../../img/plus-white.svg"></div>
+        <!-- end plus image -->
       <div class="e-gallery"></div>
       <div class="e-gallery"></div>
       <div class="e-gallery"></div>
       <div class="e-gallery"></div>
-      <div class="e-gallery"></div>
+
     </div>
 <!-- this is where we put the orange bar, images. two, up and down -->
   <div class="gallery_bottom_bar">
-    <img data-icon="map" src="../../img/arrow-left-white.svg">
-    <img data-icon="map" src="../../img/arrow-right-white.svg">
+    <img data-icon="left-arrow" src="../../img/arrow-left-white.svg">
+    <img data-icon="right-arrow" src="../../img/arrow-right-white.svg">
   </div>
 <!-- end here -->
   </div>
