JAKE FIXED THE MAP, NOT TAIGA

--- a/app/js/templates/search_results.html
+++ b/app/js/templates/search_results.html
@@ -31,7 +31,7 @@
       </td>
       <!-- icon col -->
       <td class="icon" colspan="1">
-      <img data-icon="map" src="../../img/location.svg" data-ng-click="relocate($event, sale.lat, sale.lng)" style="cursor:pointer;">
+      <img data-icon="map" src="../../img/location.svg" data-ng-click="relocate($event, sale.loc[1], sale.loc[0])" style="cursor:pointer;">
       </td>
     </tr>
   </tbody>
