View Event Page -- add left arrow with search results

--- a/app/js/templates/view_event.html
+++ b/app/js/templates/view_event.html
@@ -7,6 +7,12 @@
       <h4><strong>Time: </strong> {{(sale.timeStart  | date : 'shortTime') + ' - ' + (sale.timeEnd  | date : 'shortTime')}}</h4>
       <h4><strong>Description: </strong> {{sale.description}}</h4>
       <h4><strong>Location: </strong> {{sale.address}}</h4>
+      <!-- back arrow start -->
+        <div class="back-results">
+        <img data-icon="back-result-arrow" src="../../img/arrow-left-peach.svg">
+        Search Results
+        <div>
+      <!-- back arrow end -->
     </article>
 
   <!-- take this code below-->
