--- a/app/sass/_component/view-event.sass
+++ b/app/sass/_component/view-event.sass
@@ -40,8 +40,25 @@
 		padding-left: em(5px)
 		color: $color-font-primary
 		strong
-			text-transform: uppercase 
+			text-transform: uppercase
 			color: $color-primary
+
+//search results icon
+.back-results
+	display: flex
+	flex-flow: row nowrap
+	justify-content: flex-end
+	text-transform: uppercase
+	font-size: 16px
+	font-weight: $font-weight--bold
+	letter-spacing: 1px
+	color: $color-primary
+	img
+		width: 45px
+		height: 18px
+
+
+
 
 ol[data-type="event-details"]
 	width: 100%
