home page enter arrow

--- a/app/js/templates/home.html
+++ b/app/js/templates/home.html
@@ -17,6 +17,12 @@
         <input id="search" name="search" type="search" placeholder="City, Neighborhood, or Zip Code" data-ng-model="sale.searchParams">
       </main>
       <small class="howSearch">Search the online community to find and post yard sales.</small>
+       <!-- enter and arrow -->
+      <div class="enter-results">
+        Search Results
+        <img data-icon="enter-result-arrow" src="../../img/arrow-right-peach.svg">
+      <div>
+      <!-- enter and arrow end -->
       <button class="submit" type="submit">Send answers</button>
       <div class="controls">
         <button class="next"></button>
