--- a/app/sass/_component/home.sass
+++ b/app/sass/_component/home.sass
@@ -48,3 +48,18 @@
 
 #main-app-view
 	order: 2
+
+.enter-results
+	display: flex
+	flex-flow: row nowrap
+	justify-content: flex-end
+	text-transform: uppercase
+	font-size: 16px
+	font-weight: $font-weight--bold
+	letter-spacing: 1px
+	color: $color-primary
+	margin-top: 20px
+	width: 627px
+	img
+		width: 45px
+		height: 18px
