--- a/app/js/templates/user_profile_landing_page.html
+++ b/app/js/templates/user_profile_landing_page.html
@@ -16,7 +16,7 @@
 
   <div class="view-event" ng-repeat="sale in sales">
     <h4 class="gallery-title" id="sale{{$index+1}}">{{sale.title}}</h4>
-    <h5 data-type="edit-event"><a data-ng-click="editEvent($index)">Edit Event</a></h5>
+    <h5 data-type="edit-event"><a data-ng-click="editEvent(sale.items, $index)">Edit Event</a></h5>
       <div class="gallery-grid" ng-repeat="item in sale.items">
         <img data-ng-src="{{item.img}}" class="e-gallery"></img>
       </div>
