add more client side unit tests for controllers

--- a/app/js/templates/view_event.html
+++ b/app/js/templates/view_event.html
@@ -1,4 +1,4 @@
-<div data-ng-controller="ViewEvent" class="vw-event-container">
+<div data-ng-controller="ViewEvent" class="vw-event-container" data-ng-init="initController()">
   <!-- user profile info bar -->
   <aside class="single-event">
       <h4 class="event-header"><strong> {{sale.title}}</strong></h4>
