added buttons for existing_item_details and item_details

--- a/app/js/templates/existing_item_details.html
+++ b/app/js/templates/existing_item_details.html
@@ -29,6 +29,7 @@
     </ol>
     <div id="view-image">
       <button data-id="image-close" data-ng-click="close()">Close</button>
+      <button data-id="image-delete">Delete</button>
       <button data-id="image-save" data-ng-click="saveItem(oneItem, true)">Save</button>
     </div>
   </form>
