--- a/app/sass/_component/photo_enlarge.sass
+++ b/app/sass/_component/photo_enlarge.sass
@@ -64,7 +64,8 @@ input[id="image-title"],
 
 // button styles to rename
 button[data-id="image-close"],
-button[data-id="image-save"]
+button[data-id="image-save"],
+button[data-id="image-delete"]
   position: relative
   padding: em(5px) 0
   margin: em(20px) em(3px)
@@ -77,10 +78,11 @@ button[data-id="image-save"]
 
   // Submit button styles, color and states
 button[data-id="image-close"],
-button[data-id="image-save"]
+button[data-id="image-save"],
+button[data-id="image-delete"]
   color: $color-dkorange
   width: 20%
-  left: calc(67% - 20%/2)
+  left: 35%
   &:hover,
   &:active
     background-color: $color-teal
