--- a/app/js/templates/user_add_new_sale_form.html
+++ b/app/js/templates/user_add_new_sale_form.html
@@ -71,7 +71,7 @@
    <!-- link "upload photos next" -->
   <footer class="next-page">
     <a data-ng-click="saveNewEvent(saleInfo)">Save</a>
-    <a data-ng-click="changeDirective('uploadGallery');saveNewEvent(saleInfo)">Next: Upload Images</a>
+    <a data-ng-click="saveNewEvent(saleInfo)">Next: Upload Images</a>
     <img src="">
   </footer>
 </form>
