--- a/app/js/templates/existing_item_details.html
+++ b/app/js/templates/existing_item_details.html
@@ -29,7 +29,7 @@
     </ol>
     <div id="view-image">
       <button data-id="image-close" data-ng-click="close()">Close</button>
-      <button data-id="image-save" data-ng-click="saveItem(oneItem, true)">Save</button>
+      <button data-id="image-save" data-ng-click="saveExistingItem(oneItem)">Save</button>
     </div>
   </form>
 </div>
