--- a/app/js/templates/user_upload_gallery.html
+++ b/app/js/templates/user_upload_gallery.html
@@ -17,7 +17,7 @@
   <div class="view-thumbnails">
   <!--<h5 data-type="left-right"><a href="">Edit Event</a></h5> -->
     <div class="gallery-thumbnails">
-      <div class="e-gallery" ng-repeat="item in items">
+      <div class="e-gallery" ng-repeat="item in listItems">
         <img data-ng-src="{{item.img}}" style="width:100%;" data-ng-click="itemClick(item)">
       </div>
     </div>
