fixed image page for the route home->search->detailed items-> photo

--- a/app/sass/_component/view_item_detail.sass
+++ b/app/sass/_component/view_item_detail.sass
@@ -12,7 +12,12 @@
   @include align-items($value: center)
   padding-bottom: 10px
   width: 100%
-  background-color: red
+  justify-content: center
+  align-items: center
+  background-color: white
+  img
+    max-height: 291px
+
 
 label[for="item-info"],
   font-size: $base__font-size
