pushing up after pull

--- a/app/js/templates/user_add_new_sale_form.html
+++ b/app/js/templates/user_add_new_sale_form.html
@@ -83,13 +83,8 @@
   </section>
    <!-- link "upload photos next" -->
   <footer class="next-page">
-<<<<<<< HEAD
-    <a data-ng-click="changeDirective('landingPage');saveNewEvent(saleInfo)">Save for later</a>
-    <a data-ng-click="changeDirective('uploadGallery');saveNewEvent(saleInfo)">Next: Upload Images</a>
-    <img src="">
-=======
     <div class="icon-menu">
-      <a href=""><img class="back-icon" src="../../img/back.svg">Back</a>
+      <a href=""><img class="back-icon" src="../../img/back.svg" data-ng-click="back()">Back</a>
     </div>
     <div class="icon-menu">
       <a href="" data-ng-click="saveNewEvent(saleInfo)"><img class="save-icon" src="../../img/disk.svg">Save</a>
@@ -97,6 +92,5 @@
     <div class="icon-menu">
       <a href="" data-ng-click="saveNewEvent(saleInfo)"><img class="next-icon" src="../../img/next.svg">Next</a>
     </div>
->>>>>>> 591cca6750883d9f90ef1c8a93d8f90136ab4c0b
   </footer>
 </form>
