cleaned up modal header, home removed submit button to go back to original, view item detail margins/paddings reduced, user forms added date and time, and menu icons at bottom.

--- a/app/js/templates/view_item_details.html
+++ b/app/js/templates/view_item_details.html
@@ -1,5 +1,5 @@
 <div class="photo_enlarge mdoverlay" >
-  <form class="view-detail photoModal">
+  <form class="view-photo photoModal">
     <!-- image container-->
     <div class="detail-image-container">
       <img data-ng-src="{{oneItem.img}}" alt="{{image.alt}}">
@@ -8,17 +8,17 @@
     <ol data-type="view-container">
       <!-- title -->
       <li class="view" data-id="image-title">
-        <label for="item-info">Title</label><br>
+        <label for="item-info">Title</label>
         <p id="view-title">{{oneItem.title}}</p>
       </li>
       <!-- description -->
       <li class="view" data-id="image-title">
-        <label for="item-info">Description</label></br>
+        <label for="item-info">Description</label>
         <p id="view-description">{{oneItem.description}}</p>
       </li>
         <!-- condition -->
      <li class="view" data-id="image-title">
-        <label for="item-info">Condition</label><br>
+        <label for="item-info">Condition</label>
         <p id ="view-condition">{{oneItem.condition}}</p><br>
       </li>
     </ol>
