--- a/app/sass/_component/user_form.sass
+++ b/app/sass/_component/user_form.sass
@@ -47,6 +47,7 @@ input[name="address"],
 input[name="city"],
 input[name="state"],
 input[name="zipcode"],
+  font-size: $base__grid
   height: em(30px)
   margin: 1% em(1px)
   border: em(1px) solid $color-medgrey
