--- a/app/sass/_component/user_profile_subnav.sass
+++ b/app/sass/_component/user_profile_subnav.sass
@@ -61,26 +61,26 @@ h4[data-type="profile-header"]
   color: $color-drkgrey
   text-transform: uppercase
 
-a[class="user-event"]:before
-  font-family: FontAwesome
-  content: " \f02b"
-  padding-right: em(10px)
+// a[class="user-event"]:before
+//   font-family: FontAwesome
+//   content: " \f02b"
+//   padding-right: em(10px)
 
 a[class="user-event"]:hover
   color: $light-orange
 
-a[class="user-activity"]:before
-  font-family: FontAwesome
-  content: " \f06e"
-  padding-right: em(10px)
+// a[class="user-activity"]:before
+//   font-family: FontAwesome
+//   content: " \f06e"
+//   padding-right: em(10px)
 
 a[class="user-activity"]:hover
   color: $light-orange
 
-a[class="new-event"]:before
-  font-family: FontAwesome
-  content: " \f02c"
-  padding-right: em(10px)
+// a[class="new-event"]:before
+//   font-family: FontAwesome
+//   content: " \f02c"
+//   padding-right: em(10px)
 
 a[class="new-event"]:hover
   color: $color-primary
@@ -146,12 +146,12 @@ h5[data-type="edit-event"]
       color: $color-font-primary
       text-decoration: underline
 
-h5[data-type="edit-event"]:after
-  font-family: FontAwesome
-  content: " \f040"
-  color: $color-drkgrey
-  padding-right: em(20px)
-  padding: em(10px) 0 em(10px) 0
+// h5[data-type="edit-event"]:after
+//   font-family: FontAwesome
+//   content: " \f040"
+//   color: $color-drkgrey
+//   padding-right: em(20px)
+//   padding: em(10px) 0 em(10px) 0
 
 .gallery-grid
   flex-direction: row
