--- a/app/js/templates/user_add_new_sale_form.html
+++ b/app/js/templates/user_add_new_sale_form.html
@@ -34,8 +34,8 @@
     </div>
   </div>
   <aside>
-    <label for="event_description" data-type="event-input">event description (40 words max)</label>
-    <textarea maxlength="40" name="event_description" id="event_description" cols="30" rows="10" ng-model="saleInfo.description"></textarea>
+    <label for="event_description" data-type="event-input">event description</label>
+    <textarea maxlength="150" name="event_description" id="event_description" cols="30" rows="10" ng-model="saleInfo.description"></textarea>
   </aside>
 
   <!-- add key words to your event -->
