--- a/app/js/templates/view_event.html
+++ b/app/js/templates/view_event.html
@@ -9,9 +9,7 @@
       <h4><strong>Location: </strong> {{sale.address}}</h4>
       <!-- back arrow start -->
         <div class="back-results">
-        <img data-icon="back-result-arrow" src="../../img/arrow-left-peach.svg">
-        Search Results
-        <div>
+        <img data-icon="back-result-arrow" src="../../img/arrow-left-peach.svg">Back to Results<div>
       <!-- back arrow end -->
     </article>
 
