--- a/app/sass/_component/photo_enlarge.sass
+++ b/app/sass/_component/photo_enlarge.sass
@@ -18,16 +18,15 @@ body[class="photo_enlarge"]
   top: -3%
   display: block
   padding: em(15px) em(20px)
-  margin: em(60px) 0
+  margin: em(15px) 0
 //set the margin
 .viewphoto
   @mixin flexbox
-  margin: 2% 5% 3% 5%
+  // margin: 2% 5% 3% 5%
 
 //textarea
 #image-text
   width: 100%
-  height: 100px
   &::-webkit-resizer
     display: none
 
@@ -46,10 +45,9 @@ label[for="image-condition"],
 //input field setting
 input[id="image-description"],
 input[id="image-title"],
-  height: em(30px)
+  height: em(15px)
   width: 100%
   padding: em(5px)
-  maxlength: 50
   border: 1px solid $color-drkgrey
 
 //dropdown styling
@@ -68,7 +66,7 @@ button[data-id="image-save"],
 button[data-id="image-delete"]
   position: relative
   padding: em(5px) 0
-  margin: em(20px) em(3px)
+  margin: em(10px) em(3px)
   border: em(3px) solid $color-dkorange
   background-color: white
   font-weight: $font-weight--bold
@@ -85,6 +83,7 @@ button[data-id="image-delete"]
   left: 35%
   &:hover,
   &:active
+    border: $button_border_accent
     background-color: $color-teal
     color: white
 
