--- a/app/sass/_component/view-event.sass
+++ b/app/sass/_component/view-event.sass
@@ -49,16 +49,17 @@
 	flex-flow: row nowrap
 	justify-content: flex-end
 	text-transform: uppercase
-	font-size: 16px
+	font-size: em(16px)
 	font-weight: $font-weight--bold
-	letter-spacing: 1px
+	letter-spacing: em(1px)
 	color: $color-primary
+	margin-bottom: em(10px)
 	img
-		width: 45px
-		height: 18px
+		width: em(45px)
+		height: em(18px)
 
-
-
+.back-results:hover
+	color: $color-accent
 
 ol[data-type="event-details"]
 	width: 100%
