fix back button, save butten, picture quality to 300x300

--- a/app/js/templates/user_add_new_sale_form.html
+++ b/app/js/templates/user_add_new_sale_form.html
@@ -84,13 +84,13 @@
    <!-- link "upload photos next" -->
   <footer class="next-page">
     <div class="icon-menu">
-      <a href=""><img class="back-icon" src="../../img/back.svg" data-ng-click="back()">Back</a>
+      <a href="" data-ng-click="back()"><img class="back-icon" src="../../img/back.svg" >Back</a>
     </div>
     <div class="icon-menu">
-      <a href="" data-ng-click="saveNewEvent(saleInfo)"><img class="save-icon" src="../../img/disk.svg">Save</a>
+      <a href="" data-ng-click="saveNewEvent(saleInfo, true)"><img class="save-icon" src="../../img/disk.svg">Save</a>
     </div>
     <div class="icon-menu">
-      <a href="" data-ng-click="saveNewEvent(saleInfo)"><img class="next-icon" src="../../img/next.svg">Next</a>
+      <a href="" data-ng-click="saveNewEvent(saleInfo, false)"><img class="next-icon" src="../../img/next.svg">Next</a>
     </div>
   </footer>
 </form>
