--- a/app/js/templates/item_details.html
+++ b/app/js/templates/item_details.html
@@ -28,7 +28,7 @@
     </ol>
     <div id="view-image">
       <button data-id="image-close" data-ng-click="close()">Close</button>
-      <button data-id="image-delete">Delete</button>
+      <button data-id="image-delete" data-ng-click="close()">Delete</button>
       <button data-id="image-save" data-ng-click="saveItem(titleName, description, condition, image.url)">Save</button>
     </div>
   </form>
